<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_login_background"
        tools:context=".ui.activity.RegistrationActivity"
        >

    <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/image_logo"
            android:layout_margin="10dp"
            />

    <TextView
            android:id="@+id/text_register_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text_register_form"
            android:layout_below="@id/image_logo"
            android:layout_alignLeft="@id/image_logo"
            android:textSize="19sp"
            android:textColor="@color/text_lilac"
            />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_register_form"
            android:layout_marginTop="@dimen/activity_registration_scroll_margin_top"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/text_username"
                        android:text="@string/register_text_user_name"
                        style="@style/TextFieldRegistrationActivity"
                        />

                <EditText
                        android:id="@id/register_edit_username"
                        style="@style/EditRegistrationActivity"
                        />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                    >

                <TextView
                        android:id="@+id/text_password"
                        android:text="@string/register_text_password"
                        style="@style/TextFieldRegistrationActivity"
                        />

                <EditText
                        android:id="@id/register_edit_password"
                        android:inputType="textPassword"
                        style="@style/EditRegistrationActivity"
                        />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                    >

                <TextView
                        android:id="@+id/text_repeat_password"
                        android:text="@string/register_text_repeat_password"
                        style="@style/TextFieldRegistrationActivity"
                        />

                <EditText
                        android:id="@id/register_edit_repeat_password"
                        android:inputType="textPassword"
                        style="@style/EditRegistrationActivity"
                        />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                    >

                <TextView
                        android:id="@+id/text_email"
                        android:text="@string/register_text_email"
                        style="@style/TextFieldRegistrationActivity"
                        />

                <EditText
                        android:id="@id/register_edit_email"
                        android:inputType="textEmailAddress"
                        style="@style/EditRegistrationActivity"
                        />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_registration_second_portion_margin_top"
                    >

                <TextView
                        android:id="@+id/text_name"
                        android:text="@string/register_text_name"
                        style="@style/TextFieldRegistrationActivity"
                        />

                <EditText
                        android:id="@id/register_edit_first_name"
                        style="@style/EditRegistrationActivity"
                        />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                    >

                <TextView
                        android:id="@+id/text_second_name"
                        android:text="@string/register_text_second_name"
                        style="@style/TextFieldRegistrationActivity"
                        />

                <EditText
                        android:id="@id/register_edit_second_name"
                        style="@style/EditRegistrationActivity"
                        />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                    >

                <TextView
                        android:id="@+id/text_address"
                        android:text="@string/register_text_address"
                        style="@style/TextFieldRegistrationActivity"
                        />

                <EditText
                        android:id="@+id/register_edit_address"
                        style="@style/EditRegistrationActivity"
                        />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                    >

                <TextView
                        android:id="@+id/text_phone"
                        android:text="@string/register_text_phone"
                        style="@style/TextFieldRegistrationActivity"
                        />

                <EditText
                        android:id="@id/register_edit_phone"
                        android:inputType="phone"
                        style="@style/EditRegistrationActivity"
                        />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_country"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_country"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>
            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_province"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_province"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_city"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_city"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_zip_code"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_zip_code"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_house_no"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_house_no"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_organisation_id"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_organisation_id"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_organisation_role"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_organisation_role"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_fax"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_fax"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_facebook"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_facebook"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_twitter"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_twitter"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_registration_field_margin_top"
                >

                <TextView

                    android:text="@string/register_text_website"
                    style="@style/TextFieldRegistrationActivity"
                    />

                <EditText
                    android:id="@id/register_edit_website"
                    android:inputType="phone"
                    style="@style/EditRegistrationActivity"
                    />
            </FrameLayout>



            <FrameLayout android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/text_accept_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_text_accept_terms"
                        android:textColor="@color/text_lilac"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:layout_gravity="center_vertical"
                        />

                <CheckBox
                    android:id="@id/register_check_accept"
                    android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="200dp"/>
            </FrameLayout>

            <Button
                    android:id="@+id/register_btn_send"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_login"
                    android:text="@string/register_text_send"
                    android:textColor="@android:color/white"
                    android:layout_gravity="right"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/activity_registration_send_button_text_size"
                    />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>