<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/image_login_background"
                tools:context=".ui.activity.LoginActivity"
        >

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layout_no_account">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:layout_marginTop="@dimen/activity_login_logo_margin_top"
                    android:src="@drawable/image_logo"
                    android:padding="2dp"
                    android:layout_centerHorizontal="true"
                    />

            <EditText
                    android:id="@+id/edit_username"
                    style="@style/EditLoginActivity"
                    android:layout_marginTop="@dimen/activity_login_username_margin_top"
                    android:layout_below="@id/image_logo"
                    android:hint="@string/hint_edit_login"
                    android:drawableLeft="@drawable/icon_username"
                    android:inputType="textEmailAddress"
                    android:padding="2dp"
                    android:background="@drawable/background_edit_username"
                    />

            <EditText
                    android:id="@+id/edit_password"
                    style="@style/EditLoginActivity"
                    android:layout_below="@id/edit_username"
                    android:hint="@string/hint_edit_password"
                    android:drawableLeft="@drawable/icon_password"
                    android:inputType="textPassword"
                    android:background="@drawable/background_edit_password"
                    />

            <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_login_field_margin"
                    android:layout_marginRight="@dimen/activity_login_field_margin"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/activity_login_button_text_size"
                    android:text="@string/text_login_button"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/edit_password"
                    android:background="@drawable/background_button_login"
                    />

            <TextView
                    android:id="@+id/text_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_forgot_password"
                    android:layout_below="@id/button_login"
                    android:layout_alignLeft="@id/button_login"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/text_lilac"
                    />
        </RelativeLayout>
    </ScrollView>


    <RelativeLayout
            android:id="@+id/layout_no_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/background_activity_login_bottom_panel"
            >

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:orientation="horizontal">
            <TextView
                    android:id="@+id/text_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/activity_login_no_account_text_size"
                    android:text="@string/text_no_account"
                    />

            <TextView
                    android:id="@+id/text_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/activity_login_no_account_text_size"
                    android:layout_marginLeft="3dp"
                    android:text="@string/text_create_account"
                    />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
