<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:paddingBottom="40dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="@dimen/activity_home_item_width"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Button
                    android:id="@id/home_library_btn"
                    style="@style/ButtonHomeActivity"
                    android:background="@drawable/background_button_library" />

                <TextView
                    android:id="@+id/text_library"
                    style="@style/TextItemHomeActivity"
                    android:text="@string/text_library" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:src="@drawable/background_detail" />

            <FrameLayout
                android:layout_width="@dimen/activity_home_item_width"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Button
                    android:id="@id/home_on_the_go_btn"
                    style="@style/ButtonHomeActivity"
                    android:background="@drawable/background_button_on_go" />

                <TextView
                    android:id="@+id/text_go"
                    style="@style/TextItemHomeActivity"
                    android:text="@string/text_on_the_go" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:src="@drawable/background_detail" />

            <FrameLayout
                android:layout_width="@dimen/activity_home_item_width"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@id/home_notice_board_btn"
                    style="@style/ButtonHomeActivity"
                    android:background="@drawable/background_button_notice_board" />

                <TextView
                    android:id="@id/text_board"
                    style="@style/TextItemHomeActivity"
                    android:text="@string/text_notice_board" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:src="@drawable/background_detail" />

            <FrameLayout
                android:layout_width="@dimen/activity_home_item_width"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Button
                    android:id="@id/home_invite_a_friend_btn"
                    style="@style/ButtonHomeActivity"
                    android:background="@drawable/background_button_invite_friend" />

                <TextView
                    android:id="@+id/text_invite_friend"
                    style="@style/TextItemHomeActivity"
                    android:text="@string/text_invite_friend" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>
